# ontology-atlas

./: .env.example  .env.prod.example  .firebaseignore  .firebaserc  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  firebase.json  firestore.indexes.json  firestore.rules  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  storage.rules  tsconfig.json  vitest.config.ts
.claude/: LOOP-PRINCIPLES.md  settings.json
.codex/: config.toml  hooks.json
.githooks/: pre-commit  pre-push
.github/: DISCUSSIONS-CATEGORIES.md  PULL_REQUEST_TEMPLATE.md
.improvements/: ui-patrol-findings.md
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts
cli/: CHANGELOG.md  README.md  package.json
docs/: AGENT-GRAPH-WORKFLOW.md  AGENT-MEMORY-POSITIONING.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  DATA-MODEL.md  DEPLOY-FIREBASE.md  DEPLOYMENT.md  DESIGN-SYSTEM.md  DESKTOP-MACOS.md  DEVELOPMENT-CHECKS.md  FEATURES.md  FOUNDATIONS.md  MISSION-CLEANUP-CANDIDATES.md  MODE-AWARE-CRUD.md  OFFLINE-FIRST-UX-FLOW.md  ONTOLOGY-MODEL-V2-DRAFT.md  OPERATIONS-GUIDE.md  PRODUCT-DESIGN-OPERATING-SYSTEM.md  PRODUCT-DIRECTION.md  PRODUCT-OWNER-OPERATING-SYSTEM.md  PUBLISH-NPM.md  README.md  SEED-DATA.md  TOPOLOGY-FOCUS-AND-SCALE.md
functions/: .env.example  README.md  (+8 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+1712 files in other folders)
