[package]
name = "ontology-atlas"
version = "0.1.0"
description = "Local-first codebase ontology workbench"
authors = ["ontology-atlas contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "ontology_atlas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
notify-debouncer-full = "0.3"
